Implement gui + css for 300x300 displays
Fixes #9.

--- a/resources/styles~300x300.css
+++ b/resources/styles~300x300.css
@@ -8,7 +8,7 @@ text {
 
 text#date {
   font-size: 29;
-/*   text-length: 32; */
+  text-length: 32;
   text-anchor: middle;
 /*   x: 50%; */
 /*   y: 50%+40; */
@@ -17,7 +17,7 @@ text#date {
 
 text#time {
   font-size: 100;
-/*   text-length: 32; */
+  text-length: 32;
   text-anchor: middle;
 /*   x: 50%; */
 /*   y: 50%+40; */
@@ -25,7 +25,7 @@ text#time {
 }
 
 text#weather_temperature {
-  font-size: 30;
+  font-size: 25;
   text-length: 32;
   text-anchor: start;
 /*   x: 50%; */
@@ -34,7 +34,7 @@ text#weather_temperature {
 }
 
 text#weather_forecast {
-  font-size: 30;
+  font-size: 25;
   text-length: 32;
   text-anchor: end;
 /*   x: 50%; */
