🐛 add text-length to Ionix css file
Might be due to the new SDK; now the absent text-length field in the
Ionic css causes bad truncation of date and time fields 😞.

Add the text-length specifier. Verified working again.

Fixes #10.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -8,7 +8,7 @@ text {
 
 text#date {
   font-size: 29;
-/*   text-length: 32; */
+  text-length: 32;
   text-anchor: middle;
 /*   x: 50%; */
 /*   y: 50%+40; */
@@ -17,7 +17,7 @@ text#date {
 
 text#time {
   font-size: 100;
-/*   text-length: 32; */
+  text-length: 32;
   text-anchor: middle;
 /*   x: 50%; */
 /*   y: 50%+40; */
