Update to sdk 5.0
owm one api, try to fix atlas/vulcan layout

add vulcan/atlas gui files

save updates to atlas

on click toggle battery/hr

playing with colors

yarn lock update

use WORKDIR to skip cd during test

fix overlong date on smaller screen

Eg 'Wednesday, July 15' would overrun a tiny bit on the top corner of
the `5`. Rip Wednesday.

fix settings api key load

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -3,7 +3,7 @@
 }
 
 text {
-  font-family: Colfax-Medium;
+  font-family: System-Regular;
 }
 
 text#date {
@@ -42,18 +42,9 @@ text#weather_forecast {
   fill: fb-orange;
 }
 
-text#weather_location {
-  font-size: 18;
-  text-length: 16;
-  text-anchor: start;
-  /*   x: 50%; */
-  /*   y: 50%+40; */
-  fill: fb-pink;
-}
-
 .stats {
   font-size: 24;
-  font-family: Seville-Bold-Italic;
+  font-family: System-Regular;
   text-length: 32;
   text-anchor: start;
   /*   x: 50%; */
