--- a/resources/styles~336x336.css
+++ b/resources/styles~336x336.css
@@ -3,51 +3,51 @@
 }
 
 text {
-  font-family: Colfax-Medium;
+  font-family: System-Regular;
 }
 
 text#date {
-  font-size: 29;
+  font-size: 33;
   text-length: 32;
   text-anchor: middle;
-/*   x: 50%; */
-/*   y: 50%+40; */
+  /*   x: 50%; */
+  /*   y: 50%+40; */
   fill: fb-yellow;
 }
 
 text#time {
-  font-size: 100;
+  font-size: 125;
   text-length: 32;
   text-anchor: middle;
-/*   x: 50%; */
-/*   y: 50%+40; */
+  /*   x: 50%; */
+  /*   y: 50%+40; */
   fill: fb-lime;
 }
 
 text#weather_temperature {
-  font-size: 25;
+  font-size: 36;
   text-length: 32;
   text-anchor: start;
-/*   x: 50%; */
-/*   y: 50%+40; */
+  /*   x: 50%; */
+  /*   y: 50%+40; */
   fill: fb-pink;
 }
 
 text#weather_forecast {
-  font-size: 25;
+  font-size: 30;
   text-length: 32;
-  text-anchor: end;
-/*   x: 50%; */
-/*   y: 50%+40; */
+  text-anchor: start;
+  /*   x: 50%; */
+  /*   y: 50%+40; */
   fill: fb-orange;
 }
 
 .stats {
   font-size: 24;
-  font-family: Seville-Bold-Italic;
+  font-family: System-Regular;
   text-length: 32;
   text-anchor: start;
-/*   x: 50%; */
-/*   y: 50%+40; */
+  /*   x: 50%; */
+  /*   y: 50%+40; */
   fill: fb-cerulean;
 }
