--- a/resources/styles~336x336.css
+++ b/resources/styles~336x336.css
@@ -12,7 +12,7 @@ text#date {
   text-anchor: middle;
   /*   x: 50%; */
   /*   y: 50%+40; */
-  fill: #FFCC33; /* #E4FA3C; /* fb-yellow; */
+  fill: #ffcc33; /* #E4FA3C; /* fb-yellow; */
 }
 
 text#time {
@@ -21,7 +21,7 @@ text#time {
   text-anchor: middle;
   /*   x: 50%; */
   /*   y: 50%+40; */
-  fill: #5BE37D; /* fb-lime; */
+  fill: #5be37d; /* fb-lime; */
 }
 
 text#weather_temperature {
@@ -30,7 +30,7 @@ text#weather_temperature {
   text-anchor: start;
   /*   x: 50%; */
   /*   y: 50%+40; */
-  fill: #F80070; /* fb-pink; */
+  fill: #f80070; /* fb-pink; */
 }
 
 text#weather_forecast {
@@ -39,7 +39,7 @@ text#weather_forecast {
   text-anchor: start;
   /*   x: 50%; */
   /*   y: 50%+40; */
-  fill: #FF4500; /*fb-orange;*/
+  fill: #ff4500; /*fb-orange;*/
 }
 
 .stats {
@@ -49,5 +49,5 @@ text#weather_forecast {
   text-anchor: start;
   /*   x: 50%; */
   /*   y: 50%+40; */
-  fill: #8080FF; /* fb-cerulean; */
+  fill: #8080ff; /* fb-cerulean; */
 }
